# pyaixm

./: .gitmodules  Makefile  README.md  aixm_message.py  main.py  pyproject.toml  xsdata.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/pyaixm/: __init__.py  aixm_message.py
test/: aixm_message_test.py
test/fixtures/: error_test_case_dme.xml  message_a.xml
