[project]
name = "pyaixm"
version = "0.1.1"
description = "AIXM 5.1 python bindings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inflection>=0.5.1",
    "xsdata[cli,lxml,soap]>=25.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
